feat: use material web npm modules

--- a/client/web/static/index.html
+++ b/client/web/static/index.html
@@ -5,9 +5,11 @@
     <title>Versus lapp</title>
     <meta charset = "utf-8" />
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0" />
+    <link rel = "stylesheet" type = "text/css" href = "/versus/static/style.css" />
 </head>
 
 <body>
+    <script type = "module" src = "/versus/static/material_web.bundle.js"></script>
     <script type = "module">
         // For more details see https://rustwasm.github.io/docs/wasm-bindgen/examples/without-a-bundler.html
         import init from '/versus/static/versus_client.js';
